--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "express-react-views": "^0.10.5",
+    "fullcalendar": "^3.9.0",
     "js-sha256": "^0.9.0",
     "jsonfile": "^5.0.0",
     "method-override": "^3.0.0",
+    "multer": "^1.4.1",
     "pg": "^7.5.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
